tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari
fn consume(value: own i64) -> i64 {
  drop value;
  return 0;
}

fn main() -> i64 {
  let token: own i64 = 7;
  consume(token);
  return token;
}
